# evluating_agent

./: .gitignore
.deepeval/: .deepeval_telemetry.txt
aiqaDemoSource/: test.py
aiqaDemoSource/Section10_ComponentTestingRAGApplication/: TestingRAG.ipynb
aiqaDemoSource/Section10_ComponentTestingRAGApplication/.deepeval/: .deepeval  .deepeval_telemetry.txt
aiqaDemoSource/Section11_AIAgentComponentTesting/: TestingAIAgent.ipynb
aiqaDemoSource/Section11_AIAgentComponentTesting/.deepeval/: .deepeval_telemetry.txt
aiqaDemoSource/Section1_Introduction/: Installation.ipynb
aiqaDemoSource/Section1_Introduction/.deepeval/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json  .temp-deepeval-cache.json  (+1 more)
aiqaDemoSource/Section2_UsingLocalLLMForActualDataCreation/: UsingLLMWithLangChain.ipynb
aiqaDemoSource/Section3_TestingRAGApplication/: TestingRAG.ipynb
aiqaDemoSource/Section4_TestingRAGAdvanced/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  TestingRAGAdvanced.ipynb
aiqaDemoSource/Section5_AIAgentTesting/: .deepeval  .deepeval_telemetry.txt  TestingAIAgent.ipynb
aiqaDemoSource/Section6_TestingWithRAGAs/: RAGAsMetrics.ipynb
aiqaDemoSource/Section7_TestingRAGWithRAGAs/: TestingRAGWithRAGAs.ipynb
aiqaDemoSource/Section8_TestingLLMs/: TestingLLMs.ipynb
aiqaDemoSource/Section9_TestingLLMsAdvanced/: TestingLLMsAdvanced.ipynb
newsletter_crew/: newsletter.md  pyproject.toml
newsletter_crew/src/newsletter_crew/: crew.py  main.py
newsletter_crew/src/newsletter_crew/config/: agents.yaml  tasks.yaml
(+6 files in other folders)
